--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!-- Structure -->
             <ul class="nav pull-left top-second">
                 <li class="dropdown">
-                    <a href="#">Export <span class="icon octicon octicon-cloud-download"></span> <b class="caret"></b></a>
+                    <a href="#">Export! <span class="icon octicon octicon-cloud-download"></span> <b class="caret"></b></a>
                     <ul class="sub-nav">
                         <li>
                             <a href="#">Table</a>
