-fixed bug with highlighting in results section -nav changes

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <link rel="stylesheet" href="css/motifPicker.css">
     <link rel="stylesheet" href="css/resultContainer.css">
     <link rel="stylesheet" href="css/navigationBar.css">
+    <link rel="stylesheet" href="css/sidenav.css">
 
 </head>
 <body>
@@ -108,6 +109,38 @@
         </nav>
     </div>
 
+    <div class="nav-sidebar">
+        <nav>
+            <ul>
+                <li id="link-one">
+                    <a href="#">Save
+                        <span class="icon octicon octicon-cloud-download"></span> <b class="caret"></b>
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+                <li id="link-two">
+                    <a href="#">Show <span class="icon octicon octicon-eye"></span> <b class="caret"></b></a>
+                    <div>2</div>
+                    <div>Two</div>
+                </li>
+                <li id="link-three">
+                    <div>3</div>
+                    <div>Three</div>
+                </li>
+                <li id="link-four">
+                    <div>4</div>
+                    <div>Four</div>
+                </li>
+                <li id="link-five">
+                    <div>5</div>
+                    <div>Five</div>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
     <div class="interface-component" id="motif-list-cmp">
         <div id='motif-list'></div>
     </div>
@@ -138,8 +171,8 @@
     </div>
 
     <div class="interface-component">
-        <div id="tooltip-container" class="interface-component round"></div>
-        <div id="result" class="interface-component box round"></div>
+        <div id="tooltip-container" class="round"></div>
+        <div id="result" class="box round"></div>
     </div>
 
     <div class="interface-component">
