-created global css variables file -nav changes

--- a/index.html
+++ b/index.html
@@ -112,30 +112,47 @@
     <div class="nav-sidebar">
         <nav>
             <ul>
-                <li id="link-one">
-                    <a href="#">Save
-                        <span class="icon octicon octicon-cloud-download"></span> <b class="caret"></b>
-                    </a>
-                    <div>
+                <li id="link-zero">
+                    <div></div>
 
-                    </div>
+                    <a>
+
+                    </a>
+                </li>
+                <li id="link-one">
+                    <div>Save</div>
+
+                    <a>
+                        <span class="icon octicon octicon-cloud-download"></span>
+                    </a>
                 </li>
                 <li id="link-two">
-                    <a href="#">Show <span class="icon octicon octicon-eye"></span> <b class="caret"></b></a>
-                    <div>2</div>
-                    <div>Two</div>
+                    <div>Sequence</div>
+
+                    <a class="show-button" applyToId="sequence-input-cmp" href="#">
+                        <span class="icon octicon octicon-eye"></span>
+                    </a>
                 </li>
                 <li id="link-three">
-                    <div>3</div>
-                    <div>Three</div>
+                    <div>Slider</div>
+
+                    <a class="show-button" applyToId="log-slider-cmp" href="#">
+                        <span class="icon octicon octicon-eye"></span>
+                    </a>
                 </li>
                 <li id="link-four">
-                    <div>4</div>
-                    <div>Four</div>
+                    <div>Table</div>
+
+                    <a>
+                        <span class="icon octicon octicon-cloud-download"></span>
+                    </a>
                 </li>
                 <li id="link-five">
-                    <div>5</div>
-                    <div>Five</div>
+                    <div>Markup</div>
+
+                    <a>
+                        <span class="icon octicon octicon-cloud-download"></span>
+                    </a>
                 </li>
             </ul>
         </nav>
