-top nav is fixed now

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <link rel="stylesheet" href="css/nouislider.min.css">
     <link rel="stylesheet" href="css/pSlider.css">
     <link rel="stylesheet" href="css/resultAndSeqInput.css">
-    <link rel="stylesheet" href="css/motifPicker.css">
+    <link rel="stylesheet" href="css/UIComponents.css">
     <link rel="stylesheet" href="css/resultContainer.css">
     <link rel="stylesheet" href="css/navigationBar.css">
     <link rel="stylesheet" href="css/sidenav.css">
@@ -183,9 +183,11 @@
         </div>
     </div>
 
-    <div class="interface-component">
-        <div id='motif-list-selected' class="interface-component"></div>
+
+    <div id='motif-list-selected-cmp' class="interface-component">
+        <div id='motif-list-selected'></div>
     </div>
+
 
     <div class="interface-component">
         <div id="tooltip-container" class="round"></div>
