-some renames -fixed bug with pdf extraction -search interaction streamlined

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
 
     <!--Github icons - Octicons -->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/4.0.0/font/octicons.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.0.0/octicons.min.css">
 
 
 
@@ -70,8 +70,8 @@
     <link rel="stylesheet" href="css/resultAndSeqInput.css">
     <link rel="stylesheet" href="css/UIComponents.css">
     <link rel="stylesheet" href="css/resultContainer.css">
-    <link rel="stylesheet" href="css/navigationBar.css">
-    <link rel="stylesheet" href="css/sidenav.css">
+    <link rel="stylesheet" href="css/navigationTopBar.css">
+    <link rel="stylesheet" href="css/navigationSideBar.css">
 
     <!-- Search engine -->
     <link rel="stylesheet" href="css/awesomplete.css">
@@ -141,6 +141,10 @@
 
                         <a class="show-button" applyToId="sequence-input-cmp" href="#">
                             <span class="icon octicon octicon-eye"></span>
+                        </a>
+
+                        <a class="show-button" applyToId="sequence-input-cmp" href="#">
+                            <span class="icon octicon octicon-graph"></span>
                         </a>
                     </li>
                     <li id="link-three">
