--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- favicon --->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,7 +64,9 @@
     <script src="js/machinery/motifLibrary.js"></script>
     <script src="js/machinery/uiBuilder.js"></script>
     <script src="js/machinery/resultContainer.js"></script>
+    <script src="js/machinery/fileUpload.js"></script>
     <script src="js/machinery/calculations/combinations.js"></script>
+
 
 
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
@@ -173,8 +179,19 @@
     <div class="interface-area">
         <div class="interface-component" id="sequence-input-cmp">
             <a class="interface-button stretch-button" applyToId="sequence-input" href="#">
-                <span class="icon icon-medium octicon octicon-screen-full"></span>
+                <span class="icon icon-medium ">Full screen</span>
             </a>
+
+            <a class="interface-button upload-button" applyToId="sequence-input" href="#">
+                <span id="filename" class="file_input_replacement">Add sequence...</span>
+                <input type="file" name="uploaded_file" class="file_input_with_replacement">
+            </a>
+
+
+            <a class="interface-button show-button" applyToId="sequence-input" href="#">
+                <span class="icon icon-medium">Show sequence</span>
+            </a>
+
             <textarea name="sequenceInput" id="sequence-input" class="round" rows="3" autofocus spellcheck=false
                       placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
         </div>
