--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script src="js/machinery/motifLibrary.js"></script>
     <script src="js/machinery/uiBuilder.js"></script>
     <script src="js/machinery/resultContainer.js"></script>
-    <script src="js/machinery/fileUpload.js"></script>
+    <script src="js/machinery/fileUploader.js"></script>
     <script src="js/machinery/calculations/combinations.js"></script>
 
 
@@ -129,7 +129,6 @@
                         <div></div>
 
                         <a>
-
                         </a>
                     </li>
                     <li id="link-one">
@@ -176,26 +175,26 @@
         </div>
     </div>
 
+
     <div class="interface-area">
         <div class="interface-component" id="sequence-input-cmp">
-            <a class="interface-button stretch-button" applyToId="sequence-input" href="#">
-                <span class="icon icon-medium ">Full screen</span>
-            </a>
+            <div class="controls">
+                <a class="interface-button stretch-button" applyToId="sequence-input" href="#">
+                    <span class="icon icon-medium">Full screen</span>
+                </a>
 
-            <a class="interface-button upload-button" applyToId="sequence-input" href="#">
-                <span id="filename" class="file_input_replacement">Add sequence...</span>
-                <input type="file" name="uploaded_file" class="file_input_with_replacement">
-            </a>
+                <a class="interface-button upload-button" applyToId="sequence-input" href="#">
+                    <span class="icon icon-medium">Select a text file!:</span>
+                    <input type="file" id="fileInput">
+                </a>
 
-
-            <a class="interface-button show-button" applyToId="sequence-input" href="#">
-                <span class="icon icon-medium">Show sequence</span>
-            </a>
-
+                <a class="interface-button show-button" applyToId="sequence-input" href="#">
+                    <span class="icon icon-medium">Show sequence</span>
+                </a>
+            </div>
             <textarea name="sequenceInput" id="sequence-input" class="round" rows="3" autofocus spellcheck=false
                       placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
         </div>
-
 
         <div class="interface-component" id="log-slider-cmp">
             <div class="sliderBox">
@@ -213,16 +212,13 @@
             </div>
         </div>
 
-
         <div id='motif-list-selected-cmp' class="interface-component">
             <div id='motif-list-selected'></div>
         </div>
 
-
         <div class="interface-component">
             <div id="result" class="box round"></div>
         </div>
-
 
         <div class="interface-component">
             <table id='motif-table' class="display cell-border compact" width="100%">
@@ -230,6 +226,7 @@
         </div>
     </div>
 </div>
+
 
 </body>
 </html>
