--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
 
 
     <div class="interface-area">
+        <div id='motif-list-selected-cmp' class="interface-component">
+            <div id='motif-list-selected'></div>
+        </div>
+
         <div class="interface-component" id="sequence-input-cmp">
             <div class="controls">
                 <a class="interface-button stretch-button" applyToId="sequence-input" href="#">
@@ -184,7 +188,7 @@
                 </a>
 
                 <a class="interface-button upload-button" applyToId="sequence-input" href="#">
-                    <span class="icon icon-medium">Select a text file!:</span>
+                    <span class="icon icon-medium">Select a text file:</span>
                     <input type="file" id="fileInput">
                 </a>
 
@@ -210,10 +214,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div id='motif-list-selected-cmp' class="interface-component">
-            <div id='motif-list-selected'></div>
         </div>
 
         <div class="interface-component">
