-improved search bar click usability

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
-    <title>Motif sequenceConstructor</title>
+    <title>Sequence Motif Location Tool (MoLoTool)</title>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -177,7 +177,7 @@
 
 
     <div class="interface-area">
-        <div id='motif-list-selected-cmp' class="interface-component">
+        <div id='motif-list-selected-cmp' class="interface-component empty">
             <div id='motif-list-selected'></div>
         </div>
 
