--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     <script src="js/machinery/uiBuilder.js"></script>
     <script src="js/machinery/resultContainer.js"></script>
     <script src="js/machinery/fileUploader.js"></script>
+    <script src="js/machinery/sequenceTabs.js"></script>
     <script src="js/machinery/calculations/combinations.js"></script>
+
 
 
     <link rel="stylesheet" href="css/primaryComponentsSettings.css">
@@ -199,11 +201,6 @@
                     <span class="icon icon-medium">Full screen</span>
                 </a>
 
-                <a class="interface-button upload-button" applyToId="sequence-input" href="#">
-                    <span class="icon icon-medium">Select a text file:</span>
-                    <input type="file" id="fileInput">
-                </a>
-
                 <a class="interface-button to-hidden-button" applyToId="sequence-input" state="hidden" href="#">
                     <span class="icon icon-medium">Show sequence</span>
                 </a>
@@ -212,16 +209,22 @@
                     <span class="icon icon-medium">Make inline</span>
                 </a>
 
-                <a class="interface-button to-zoom-in-button" applyToId="sequence-input" href="#">
-                    <span class="icon icon-medium">[+]</span>
+                <a class="interface-button" id="add-tab-button" applyToId="sequence-tabs" href="#">
+                    <span class="icon icon-medium">+</span>
                 </a>
 
-                <a class="interface-button to-zoom-out-button" applyToId="sequence-input" href="#">
-                    <span class="icon icon-medium">[-]</span>
+                <a class="interface-button upload-button" applyToId="sequence-input" href="#">
+                    <span class="icon icon-medium">Select a text file:</span>
+                    <input type="file" id="fileInput">
                 </a>
             </div>
-            <textarea name="sequenceInput" id="sequence-input" class="round hidden" rows="3" autofocus spellcheck=false
-                      placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
+
+            <div id="sequence-tabs">
+                <ul class="tabs"></ul>
+
+                <textarea name="sequenceInput" id="sequence-input" class="round hidden" rows="3" autofocus spellcheck=false
+                          placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
+            </div>
         </div>
 
 
