-added sequence tabs add/delete functionality
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </a>
 
                 <a class="interface-button" id="add-tab-button" applyToId="sequence-tabs" href="#">
-                    <span class="icon icon-medium">+</span>
+                    <span class="icon icon-medium">Add tab</span>
                 </a>
 
                 <a class="interface-button upload-button" applyToId="sequence-input" href="#">
@@ -222,7 +222,7 @@
             <div id="sequence-tabs">
                 <ul class="tabs"></ul>
 
-                <textarea name="sequenceInput" id="sequence-input" class="round hidden" rows="3" autofocus spellcheck=false
+                <textarea name="sequenceInput" id="sequence-input" class="round" rows="3" spellcheck=false
                           placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
             </div>
         </div>
